--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "react-hook-form": "^7.40.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
